@@ -4,7 +4,8 @@
 
 	New GTK-based configurator, usable using 'make gconfig'.
 
-	New packages: cgilua, coxpcall, luafilesystem, luasocket, rings
+	New packages: cgilua, copas, coxpcall, luafilesystem,
+	luasocket, rings
 
 	Updated/fixed packages: cdrkit, libidn, netperf
 
